# quadrotor-dev

./: .gitignore  CMakeLists.txt  quadrotor.cpp  quadrotor_plant.cpp  quadrotor_plant.hpp  run.sh  tmp.cpp  tmp.sh
acrobot/: CMakeLists.txt  acrobot_control.cpp  acrobot_control2.cpp  acrobot_plant.cpp  acrobot_plant.hpp  acrobot_simulate.cpp  animation.py  run.sh  show_simulation.py
control/: CMakeLists.txt  dynamics.cpp  dynamics.hpp  old_quadrotor.cpp  quadrotor_control.cpp  quadrotor_plant.cpp  quadrotor_plant.hpp  run.sh
dynamics/: CMakeLists.txt  quadrotor_control.cpp  quadrotor_plant.cpp  quadrotor_plant.hpp  roll_pitch_yaw.cpp  roll_pitch_yaw.hpp  system.cpp  system.hpp
experiments/: CMakeLists.txt  casadi_eigen_comparison.cpp  quadrotor_control.cpp  quick_casadi.cpp  run.sh  run_comparison.sh  run_quick_casadi.sh
quadrotor/: CMakeLists.txt  quadrotor_control.cpp  quadrotor_plant.cpp  quadrotor_plant.hpp
